k8s/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: davidbreau
spec:
  selector:
    app: mysql  
  ports:
  - protocol: TCP
    port: 3306 
    targetPort: 3306  
  type: ClusterIP
