k8s/streamlit-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: streamlit-service
  namespace: davidbreau
spec:
  selector:
    app: streamlit
  ports:
  - protocol: TCP
    port: 8501
    targetPort: 8501
  type: ClusterIP
