k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: davidbreau
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /davidbreau(/|$)(.*) 
        pathType: ImplementationSpecific
        backend:
          service:
            name: api-service
            port:
              number: 8000
